Fixed SVG logo height
Was overlapping with content

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -340,10 +340,6 @@ header {
 	text-decoration: none;
 }
 
-.site-logo {
-	margin-right: 1rem;
-}
-
 nav {
 	position: absolute;
 	text-align: center;
